--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 /*
 Theme Name: Vanilka
 Author: Nafta
-Description: Vanilka is an starter wordpress theme.
+Description: Vanilka is an wordpress starter theme.
 Version: 1.0
 */
 
