renamed to highlighted

--- a/website/views/index.pug
+++ b/website/views/index.pug
@@ -2,5 +2,5 @@ extends base/layout.pug
 block content
   include components/header.pug
   include components/billboard.pug
-  include components/features.pug
+  include components/highlighted.pug
   include components/footer.pug
