updated highlighted component css

--- a/website/styles/main.sass
+++ b/website/styles/main.sass
@@ -4,6 +4,6 @@
 @import "components/_nav-menu"
 @import "components/_header"
 @import "components/_billboard"
-@import "components/_features"
+@import "components/_highlighted"
 @import "components/_footer"
 @import "components/_buttons"
