--- a/website/views/components/highlighted.pug
+++ b/website/views/components/highlighted.pug
@@ -1,6 +1,6 @@
-section.features-wrapper
+section.highlighted-wrapper
   .container
-    .features
+    .highlighted
       div
         h2.title Minimal
         p.text
