add utility classses and new breakpoints

--- a/website/styles/base/_variables.scss
+++ b/website/styles/base/_variables.scss
@@ -1,8 +1,10 @@
 $breakpoints: (
-  small           : (min-width: 768px),
-  medium          : (min-width: 992px),
-  large           : (min-width: 1200px),
-  extra-small-only: (max-width: 767px)
+  extra-small      : (min-width: 576px),
+  small            : (min-width: 768px),
+  medium           : (min-width: 992px),
+  large            : (min-width: 1200px),
+  extra-small-only : (max-width: 575px),
+  small-only       : (max-width: 767px)
 );
 
 
@@ -10,4 +12,5 @@ $major-color: hsl(1, 0%, 20%);
 $minor-color: hsl(1, 0%, 40%);
 $accent-color: hsl(1, 0%, 50%);
 $black-color: hsl(1, 0%, 10%);
+$gray-color-l: hsl(0, 0%, 80%);
 $white-color: hsl(1, 0%, 100%);
