--- a/website/styles/base/_layout.sass
+++ b/website/styles/base/_layout.sass
@@ -20,6 +20,17 @@ a:hover
 .text
   margin-bottom: 1em
   line-height: 1.5em
+  max-width: 600px
+
+.description
+  line-height: 1.5em
+  max-width: 600px
 
 .title
-  margin-bottom: 1rem
+  margin-bottom: 1.6rem
+
+.section-title
+  margin-bottom: 3rem
+
+.sub-title
+  margin-bottom: 0.6rem
