improves the billboard section

--- a/website/views/components/billboard.pug
+++ b/website/views/components/billboard.pug
@@ -1,5 +1,8 @@
 section.billboard-wrapper
   .container
     .billboard
-      h1(class="billboard-title") A Minimal Wordpress starter theme   
-      a(href="#" class="btn btn-inverse btn-large") Download
+      h1(class="billboard-title") Vanilka
+      h2(class="billboard-sub-title") a minimal Wordpress starter theme   
+      a(href="https://github.com/Nafta7/vanilka" 
+      class="btn btn-inverse btn-large") 
+        | Download
