--- a/website/styles/components/_billboard.sass
+++ b/website/styles/components/_billboard.sass
@@ -9,7 +9,13 @@
   align-items: center
 
 .billboard-title
-  font-size: 2.5em
+  font-size: 3rem
   text-align: center
-  margin-bottom: 2em
+  margin-bottom: 1.5rem
   text-transform: uppercase
+
+.billboard-sub-title
+  font-weight: normal
+  font-size: 1.5rem
+  margin-bottom: 1.5rem
+  text-align: center
