--- a/website/views/components/highlighted.pug
+++ b/website/views/components/highlighted.pug
@@ -1,23 +1,22 @@
 section.highlighted-wrapper
   .container
     .highlighted
-      div
+      .highlight
         h2.title Minimal
-        p.text
+        p.description
           | Does not include any framework or library like Bootstrap and
           | jQuery. Only pure, lean markup.
           
-      div
+      .highlight
         h2.title Modular
-        p.text
+        p.description
           | Because the theme was build with modularity in mind, 
           | it's very easy to enable or disable theme features.
           
-      div
+      .highlight
         h2.title Modern
-        p.text
-          | Write the latest version of JavaScript (ES2015) paired 
-          | with Sass that are automatically compiled with support 
-          | for live-reload on the browser as you save the files.
+        p.description
+          | Write the latest version of JavaScript paired 
+          | with Sass and support for live-reload on the browser.
           
           
