--- a/website/styles/main.sass
+++ b/website/styles/main.sass
@@ -5,5 +5,6 @@
 @import "components/_header"
 @import "components/_billboard"
 @import "components/_highlighted"
+@import "components/_features"
 @import "components/_footer"
 @import "components/_buttons"
