--- a/website/styles/components/_footer.sass
+++ b/website/styles/components/_footer.sass
@@ -1,13 +1,16 @@
 .footer-wrapper
-  padding: 2em 0em
+  padding: 3rem 0rem
   background-color: $black-color
   color: #fff
 
 .footer
   display: flex
+  flex-flow: column
+  align-items: center
 
-  & > *
+  & > *:not(:last-of-type)
     flex: 1 0
+    margin-bottom: 1.5rem
 
 .button-group
   display: flex
@@ -15,4 +18,4 @@
   align-items: flex-start
 
   & > *:not(:last-child)
-    margin-bottom: 1em
+    margin-bottom: 1rem
