--- a/website/views/components/footer.pug
+++ b/website/views/components/footer.pug
@@ -5,5 +5,6 @@ section.footer-wrapper
         p
           | Vanilka is open-sourced under the MIT license.
       .button-group
-        a(href="#" class="btn btn-inverse") Github
+        a(href="https://github.com/Nafta7/vanilka" class="btn btn-inverse")
+          | Github
     
