--- a/website/views/components/header.pug
+++ b/website/views/components/header.pug
@@ -6,6 +6,5 @@ section.header-wrapper
           a(href="/") Vanilka
       nav
         ul.menu
-          li #[a(href="#") Home]
-          li #[a(href="#") Docs]
-          li #[a(href="#") Download]
+          li #[a(href="#features") Features]
+          li #[a(href="https://github.com/Nafta7/vanilka") Download]
