includes features view

--- a/website/views/index.pug
+++ b/website/views/index.pug
@@ -3,4 +3,5 @@ block content
   include components/header.pug
   include components/billboard.pug
   include components/highlighted.pug
+  include components/features.pug
   include components/footer.pug
