--- a/website/views/base/head.pug
+++ b/website/views/base/head.pug
@@ -1,2 +1,3 @@
 link(rel="stylesheet" href="main.css")
 meta(name="viewport" content="width=device-width, initial-scale=1")
+title Vanilka - A minimal Wordpress starter theme.
