--- a/website/views/components/features.pug
+++ b/website/views/components/features.pug
@@ -39,14 +39,16 @@
       .feat    
         h2.sub-title Selected Wordpress theme features
         p.text
-          | Enable only the most basic and essential Wordpress features needed to
-          | build a website today. The following features are enabled by default:
+          | Enable only the most basic and essential Wordpress 
+          | features needed to build a website today. 
+          | The following features are enabled by default:
         ul.features-list
           li 
-            | #[b Menu:] Register a menu for the main navigation for the website
+            | #[b Menu:] Register a menu for the main navigation
+            | of the website.
           li 
-            | #[b Widgets:] Enables widgets with a sidebar by default
+            | #[b Widgets:] Enables widgets with a sidebar by default.
           li
             | #[b Featured image:] Enabled by default.
           li 
-            | #[b Assets:] Enqueues a stylesheet style and a JavaScript file.
+            | #[b Assets:] Enqueues a stylesheet file and a JavaScript file.
