rename color variable

--- a/website/styles/base/_variables.scss
+++ b/website/styles/base/_variables.scss
@@ -8,9 +8,9 @@ $breakpoints: (
 );
 
 
-$major-color: hsl(1, 0%, 20%);
-$minor-color: hsl(1, 0%, 40%);
-$accent-color: hsl(1, 0%, 50%);
-$black-color: hsl(1, 0%, 10%);
+$dark-color-major: hsl(1, 0%, 18%);
+$dark-color-minor: hsl(1, 0%, 40%);
+
 $gray-color-l: hsl(0, 0%, 80%);
 $white-color: hsl(1, 0%, 100%);
+$black-color: hsl(1, 3%, 10%);
