--- a/website/styles/components/_billboard.sass
+++ b/website/styles/components/_billboard.sass
@@ -1,5 +1,5 @@
 .billboard-wrapper
-  background-color: $major-color
+  background-color: $dark-color-major
   color: white
   padding: 8em 0em
 
@@ -17,5 +17,5 @@
 .billboard-sub-title
   font-weight: normal
   font-size: 1.5rem
-  margin-bottom: 1.5rem
+  margin-bottom: 2rem
   text-align: center
