--- a/website/styles/components/_buttons.sass
+++ b/website/styles/components/_buttons.sass
@@ -9,5 +9,5 @@
   &:hover
     border: 3px solid $white-color
     background-color: $white-color
-    color: $major-color
+    color: $dark-color-major
     text-decoration: none
