--- a/website/styles/base/_layout.sass
+++ b/website/styles/base/_layout.sass
@@ -3,6 +3,7 @@
   padding: 0
 
 body
+  color: $black-color
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif
 
 a, a:link, a:visited
