--- a/website/views/components/billboard.pug
+++ b/website/views/components/billboard.pug
@@ -2,7 +2,7 @@ section.billboard-wrapper
   .container
     .billboard
       h1(class="billboard-title") Vanilka
-      h2(class="billboard-sub-title") a minimal Wordpress starter theme   
+      h2(class="billboard-sub-title") a minimal Wordpress starter theme.   
       a(href="https://github.com/Nafta7/vanilka" 
       class="btn btn-inverse btn-large") 
         | Download
