--- a/website/views/components/header.pug
+++ b/website/views/components/header.pug
@@ -2,7 +2,7 @@ section.header-wrapper
   .container
     .header
       header
-        h1
+        h1.logo-title
           a(href="/") Vanilka
       nav
         ul.menu
