--- a/website/views/base/head.pug
+++ b/website/views/base/head.pug
@@ -1,3 +1,5 @@
+// build:css main.all.css
 link(rel="stylesheet" href="main.css")
+// endbuild
 meta(name="viewport" content="width=device-width, initial-scale=1")
-title Vanilka - A minimal Wordpress starter theme.
+title Vanilka - a minimal Wordpress starter theme.
