add documentation page

--- a/website/styles/base/_layout.sass
+++ b/website/styles/base/_layout.sass
@@ -18,10 +18,21 @@ a:hover
   margin: 0 auto
   padding: 0 1em
 
+.content-main
+  padding-top: 3rem
+  padding-bottom: 3rem
+
+.documentation
+  padding-bottom: 3rem
+
+.page-header-wrapper
+  background: $dark-color-major
+  color: $white-color
+  padding: 4rem 0
+
 .text
   margin-bottom: 1em
   line-height: 1.5em
-  max-width: 600px
 
 .description
   line-height: 1.5em
@@ -35,3 +46,7 @@ a:hover
 
 .sub-title
   margin-bottom: 0.6rem
+
+.page-sub-title
+  margin-top: 2rem
+  margin-bottom: 1rem
