--- a/website/styles/base/_variables.scss
+++ b/website/styles/base/_variables.scss
@@ -10,6 +10,7 @@ $breakpoints: (
 
 $dark-color-major: hsl(1, 0%, 18%);
 $dark-color-minor: hsl(1, 0%, 40%);
+$light-color-major: hsl(0, 0%, 92%);
 
 $gray-color-l: hsl(0, 0%, 80%);
 $white-color: hsl(1, 0%, 100%);
