--- a/website/styles/main.sass
+++ b/website/styles/main.sass
@@ -1,6 +1,7 @@
 @import "base/_variables"
 @import "base/_mixins"
 @import "base/_layout"
+@import "base/_utility"
 @import "components/_nav-menu"
 @import "components/_header"
 @import "components/_billboard"
@@ -8,3 +9,4 @@
 @import "components/_features"
 @import "components/_footer"
 @import "components/_buttons"
+@import "components/_snippet"
