--- a/website/views/components/header.pug
+++ b/website/views/components/header.pug
@@ -6,5 +6,6 @@ section.header-wrapper
           a(href="/") Vanilka
       nav
         ul.menu
-          li #[a(href="#features") Features]
+          li #[a(href="/#features") Features]
+          li #[a(href="/docs.html") Docs]
           li #[a(href="https://github.com/Nafta7/vanilka") Download]
