--- a/website/views/components/docs/developing.pug
+++ b/website/views/components/docs/developing.pug
@@ -1,10 +1,10 @@
-.container.developing
+#developing.developing
   h2.page-sub-title Developing
   p.text
     | After installing the dependencies and building the assets, you're
     | ready to start developing your theme. All of the following commands
-    | are simple npm scripts that are available inside the #[i package.json]
-    | file.
+    | are simple npm scripts that are available inside the 
+    | #[span.mark-l package.json] file.
 
   h3.page-sub-title Watching assets
   p.text
@@ -19,7 +19,7 @@
   h3.page-sub-title Building assets
   p.text
     | When the theme is ready for production, run the following command
-    | to generate the minified version of the assets.
+    | to generate the minified version of the assets:
     
   pre
     code.snippet
