--- a/website/views/components/docs/installation.pug
+++ b/website/views/components/docs/installation.pug
@@ -1,4 +1,4 @@
-.container.installation
+#installation.installation
   h2.page-sub-title Installation
   p.text
     | It's possible to download a zip file from the project's repository but 
