--- a/website/views/components/docs/live-reload.pug
+++ b/website/views/components/docs/live-reload.pug
@@ -1,9 +1,11 @@
-.container.live-reload
+#live-reload.live-reload
   h2.page-sub-title Enabling live-reload
   
   p.text
-    | To enable live-reload you have to provide your local dev-server 
-    | address to npm's package.json file. Open the package.json file 
+    | To enable live-reload you have to provide your 
+    | #[b local dev-server address] 
+    | to npm's #[span.mark-l package.json] file. Open the 
+    | #[span.mark-l package.json] file 
     | and edit the proxy field in the config section with your 
     | local dev-server address.
 
