--- a/website/styles/components/_sidebar-menu.sass
+++ b/website/styles/components/_sidebar-menu.sass
@@ -2,7 +2,7 @@
   list-style: none
   display: flex
   flex-flow: column
-  align-items: center
+  // align-items: center
 
   @include respond-to(extra-small)
     flex-flow: row
