fix header broken link

--- a/website/views/components/header.pug
+++ b/website/views/components/header.pug
@@ -3,7 +3,7 @@ section.header-wrapper
     .header
       header
         h1.logo-title
-          a(href="/") Vanilka
+          a(href="index.html") Vanilka
       nav
         ul.menu
           li #[a(href="index.html#features") Features]
