handle username change

--- a/website/views/components/billboard.pug
+++ b/website/views/components/billboard.pug
@@ -3,6 +3,6 @@ section.billboard-wrapper
     .billboard
       h1(class="billboard-title") Vanilka
       h2(class="billboard-sub-title") a minimal Wordpress starter theme.   
-      a(href="https://github.com/Nafta7/vanilka" 
+      a(href="https://github.com/Nefla/vanilka" 
       class="btn btn-inverse btn-large") 
         | Download
