--- a/website/views/components/docs/installation.pug
+++ b/website/views/components/docs/installation.pug
@@ -11,7 +11,7 @@
     code.snippet
       | cd path/to/wp-site/wp-content/themes
       br
-      | git clone https://github.com/Nafta7/vanilka.git theme-name
+      | git clone https://github.com/Nefla/vanilka.git theme-name
       br
       | cd theme-name
 
