--- a/website/views/components/header.pug
+++ b/website/views/components/header.pug
@@ -8,4 +8,4 @@ section.header-wrapper
         ul.menu
           li #[a(href="index.html#features") Features]
           li #[a(href="docs.html") Docs]
-          li #[a(href="https://github.com/Nafta7/vanilka") Download]
+          li #[a(href="https://github.com/Nefla/vanilka") Download]
