--- a/website/views/components/footer.pug
+++ b/website/views/components/footer.pug
@@ -5,6 +5,6 @@ section.footer-wrapper
         p
           | Vanilka is open-sourced under the MIT license.
       .button-group
-        a(href="https://github.com/Nafta7/vanilka" class="btn btn-inverse")
+        a(href="https://github.com/Nefla/vanilka" class="btn btn-inverse")
           | Github
     
